--- a/changelog.txt
+++ b/changelog.txt
@@ -1,7 +1,7 @@
 1.0.1 Version publicada
       -Corriendo como servicio
-      -Anadido setting para mostrar o no notificaciones
       -Anadido setting para controlar cada cuanto tiempo se ejecuta el servicio
+      
 
 1.0.0 Initial Release
-      - Primera version funcionando  
+      - Primera version no funcionando  
