--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,5 @@
+1.1   Comprobado en Windows/Linux/Raspberry
+
 1.0.4 Añadido para tmp
       -Se añade eleccion de carpeta temporal
       -Se pone por defecto el servicio 1 vez al dia ( 1440 minutos )
